--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <title>AR Location – Hydra</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <script src="https://aframe.io/releases/1.4.0/aframe.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/AR-js-org/AR.js@3.4.5/aframe/build/aframe-ar.js"></script>
-    <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/AR-js-org/AR.js@3.4.5/aframe/build/aframe-ar-nft.js"></script>
     <style>
       * { margin: 0; padding: 0; box-sizing: border-box; }
       body { background: #000; overflow: hidden; font-family: sans-serif; }
@@ -38,32 +37,38 @@
       <button id="startBtn">▶ AR Starten</button>
     </div>
     <div id="status">📍 GPS wird ermittelt…</div>
+
     <a-scene
       vr-mode-ui="enabled: false"
       renderer="antialias: true; alpha: true; logarithmicDepthBuffer: true;"
-      arjs="sourceType: webcam; debugUIEnabled: false; trackingMethod: best;"
+      arjs="sourceType: webcam; debugUIEnabled: false; videoTexture: true;"
       loading-screen="enabled: false"
     >
+      <a-assets>
+        <a-asset-item id="model" src="Matiblendlocationtest.glb"></a-asset-item>
+      </a-assets>
+
       <a-entity
-        gps-entity-place="latitude: 37.350000; longitude: 23.466767"
-        look-at="[gps-camera]"
+        gps-new-entity-place="latitude: 37.350000; longitude: 23.466767"
+        position="0 0 0"
+        scale="2 2 2"
       >
-        <a-text value="🏛 ARExhibition\nWillkommen auf Hydra!"
-          color="white" align="center" width="6" position="0 1.5 0">
-        </a-text>
-        <a-box position="0 1.5 -0.1" width="3.5" height="1.2" depth="0.05"
-          color="#1a1a2e" opacity="0.8">
-        </a-box>
-        <a-cylinder position="0 0.05 0" radius="0.5" height="0.1"
-          color="#00ffcc" opacity="0.7">
-        </a-cylinder>
+        <a-entity
+          gltf-model="#model"
+          animation-mixer="loop: repeat"
+          position="0 0 0"
+          scale="1 1 1"
+        ></a-entity>
       </a-entity>
-      <a-camera gps-camera="minDistance: 1" rotation-reader></a-camera>
+
+      <a-camera gps-new-camera="gpsMinDistance: 2; gpsTimeInterval: 1000;"></a-camera>
     </a-scene>
+
     <script>
       const overlay  = document.getElementById('overlay');
       const startBtn = document.getElementById('startBtn');
       const status   = document.getElementById('status');
+
       startBtn.addEventListener('click', () => {
         overlay.style.display = 'none';
         status.style.display  = 'block';
