--- a/index.html
+++ b/index.html
@@ -41,50 +41,4 @@
     <a-scene
       vr-mode-ui="enabled: false"
       renderer="antialias: true; alpha: true; logarithmicDepthBuffer: true;"
-      arjs="sourceType: webcam; debugUIEnabled: false; videoTexture: true;"
-      loading-screen="enabled: false"
-    >
-      <a-assets>
-        <a-asset-item id="model" src="Matiblendlocationtest.glb"></a-asset-item>
-      </a-assets>
-
-      <a-entity
-        gps-new-entity-place="latitude: 37.350000; longitude: 23.466767"
-        position="0 0 0"
-        scale="2 2 2"
-      >
-        <a-entity
-          gltf-model="#model"
-          animation-mixer="loop: repeat"
-          position="0 0 0"
-          scale="1 1 1"
-        ></a-entity>
-      </a-entity>
-
-      <a-camera gps-new-camera="gpsMinDistance: 2; gpsTimeInterval: 1000;"></a-camera>
-    </a-scene>
-
-    <script>
-      const overlay  = document.getElementById('overlay');
-      const startBtn = document.getElementById('startBtn');
-      const status   = document.getElementById('status');
-
-      startBtn.addEventListener('click', () => {
-        overlay.style.display = 'none';
-        status.style.display  = 'block';
-        if (navigator.geolocation) {
-          navigator.geolocation.watchPosition(
-            (pos) => {
-              const lat = pos.coords.latitude.toFixed(5);
-              const lon = pos.coords.longitude.toFixed(5);
-              const acc = Math.round(pos.coords.accuracy);
-              status.textContent = `📍 ${lat}, ${lon} (±${acc}m)`;
-            },
-            (err) => { status.textContent = '⚠️ GPS Fehler: ' + err.message; },
-            { enableHighAccuracy: true, maximumAge: 0, timeout: 15000 }
-          );
-        }
-      });
-    </script>
-  </body>
-</html>
+      arjs="sourceType: webcam; debugUIEnabled: false; trackingMet
