--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <title>AR Location – Hydra</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <script src="https://aframe.io/releases/1.4.0/aframe.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/AR-js-org/AR.js@3.4.5/aframe/build/aframe-ar-nft.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/AR-js-org/AR.js@3.4.5/aframe/build/aframe-ar.js"></script>
+    <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
     <style>
       * { margin: 0; padding: 0; box-sizing: border-box; }
       body { background: #000; overflow: hidden; font-family: sans-serif; }
@@ -54,36 +55,34 @@
       <span id="direction">Richtung wird berechnet…</span><br>
       <span id="distance"></span>
     </div>
-
     <a-scene
       vr-mode-ui="enabled: false"
       renderer="antialias: true; alpha: true; logarithmicDepthBuffer: true;"
       arjs="sourceType: webcam; debugUIEnabled: false; trackingMethod: best;"
       loading-screen="enabled: false"
     >
-      <a-assets>
+      <a-assets timeout="10000">
         <a-asset-item id="model" src="Matiblendlocationtest.glb"></a-asset-item>
       </a-assets>
 
       <a-entity
-        gps-entity-place="latitude: 37.350000; longitude: 23.466767"
-        look-at="[gps-camera]"
+        gps-entity-place="latitude: 37.35170; longitude: 23.46239"
+        rotation="0 180 0"
       >
         <a-entity
           gltf-model="#model"
           animation-mixer="loop: repeat"
-          position="0 0 0"
-          scale="2 2 2"
+          position="0 1 0"
+          scale="20 20 20"
         ></a-entity>
       </a-entity>
 
-      <a-camera gps-camera="minDistance: 1" rotation-reader></a-camera>
+      <a-camera gps-camera="minDistance: 0" rotation-reader></a-camera>
     </a-scene>
 
     <script>
-      const TARGET_LAT = 37.350000;
-      const TARGET_LON = 23.466767;
-
+      const TARGET_LAT = 37.35170;
+      const TARGET_LON = 23.46239;
       let userLat = null, userLon = null, userHeading = null;
 
       function toRad(deg) { return deg * Math.PI / 180; }
@@ -108,7 +107,6 @@
 
       function updateCompass() {
         if (userLat === null || userHeading === null) return;
-
         const dist = getDistance(userLat, userLon, TARGET_LAT, TARGET_LON);
         const bearing = getBearing(userLat, userLon, TARGET_LAT, TARGET_LON);
         const relative = (bearing - userHeading + 360) % 360;
@@ -117,12 +115,12 @@
           dist < 1000 ? `${Math.round(dist)}m entfernt` : `${(dist/1000).toFixed(1)}km entfernt`;
 
         const arrow = document.getElementById('arrow');
-        const dir = document.getElementById('direction');
+        const dir   = document.getElementById('direction');
         arrow.style.transform = `rotate(${relative}deg)`;
+        arrow.textContent = '⬆️';
 
         if (dist < 10) {
           dir.textContent = '🎯 Du bist da!';
-          arrow.textContent = '✅';
         } else if (relative < 30 || relative > 330) {
           dir.textContent = 'Geradeaus';
         } else if (relative < 90) {
@@ -140,10 +138,9 @@
 
       document.getElementById('startBtn').addEventListener('click', () => {
         document.getElementById('overlay').style.display = 'none';
-        document.getElementById('status').style.display = 'block';
+        document.getElementById('status').style.display  = 'block';
         document.getElementById('compass').style.display = 'block';
 
-        // GPS
         navigator.geolocation.watchPosition(
           (pos) => {
             userLat = pos.coords.latitude;
@@ -157,7 +154,6 @@
           { enableHighAccuracy: true, maximumAge: 0, timeout: 15000 }
         );
 
-        // Kompass
         if (window.DeviceOrientationEvent) {
           if (typeof DeviceOrientationEvent.requestPermission === 'function') {
             DeviceOrientationEvent.requestPermission().then(state => {
