--- a/index.html
+++ b/index.html
@@ -14,18 +14,14 @@
         position: fixed; inset: 0; background: rgba(0,0,0,0.85);
         display: flex; flex-direction: column; align-items: center;
         justify-content: center; z-index: 9999; color: white;
-        text-align: center; padding: 30px; gap: 16px;
+        text-align: center; padding: 30px;
       }
-      #overlay h1 { font-size: 26px; }
-      #overlay p  { font-size: 15px; color: #ccc; line-height: 1.5; }
-      .btn {
+      #overlay h1 { font-size: 26px; margin-bottom: 12px; }
+      #overlay p  { font-size: 15px; color: #ccc; margin-bottom: 30px; line-height: 1.5; }
+      #startBtn {
         padding: 16px 36px; font-size: 18px; font-weight: 700;
         background: #fff; color: #000; border: none;
-        border-radius: 14px; cursor: pointer; width: 100%;
-      }
-      .btn.secondary {
-        background: rgba(255,255,255,0.15); color: white;
-        font-size: 15px; padding: 12px;
+        border-radius: 14px; cursor: pointer;
       }
       #status {
         position: fixed; top: 16px; left: 50%; transform: translateX(-50%);
@@ -33,165 +29,60 @@
         border-radius: 20px; font-size: 13px; z-index: 8888;
         display: none; text-align: center; max-width: 90vw;
       }
-      #compass {
-        position: fixed; top: 60px; left: 50%; transform: translateX(-50%);
-        background: rgba(0,0,0,0.7); color: white;
-        padding: 10px 20px; border-radius: 20px;
-        font-size: 14px; z-index: 8888; display: none;
-        text-align: center; min-width: 200px;
-      }
-      #arrow {
-        font-size: 32px; display: block; margin-bottom: 4px;
-        transition: transform 0.3s;
-      }
-      #distance { font-size: 13px; color: #aaa; }
     </style>
   </head>
   <body>
     <div id="overlay">
       <h1>🗺 AR auf Hydra</h1>
-      <p>Kamera, Standort und Kompass werden benötigt.<br>Bitte alles erlauben wenn gefragt.</p>
-      <!-- Schritt 1: Kompass erlauben (iOS braucht das zuerst!) -->
-      <button class="btn" id="compassBtn">🧭 Kompass erlauben</button>
-      <!-- Schritt 2: AR starten -->
-      <button class="btn secondary" id="startBtn" style="display:none">▶ AR Starten</button>
-      <p id="compassStatus" style="font-size:13px; color:#aaa;"></p>
+      <p>Diese Seite nutzt deine Kamera und deinen Standort.<br>Bitte beides erlauben wenn gefragt.</p>
+      <button id="startBtn">▶ AR Starten</button>
     </div>
     <div id="status">📍 GPS wird ermittelt…</div>
-    <div id="compass">
-      <span id="arrow">⬆️</span>
-      <span id="direction">Richtung wird berechnet…</span><br>
-      <span id="distance"></span>
-    </div>
     <a-scene
       vr-mode-ui="enabled: false"
       renderer="antialias: true; alpha: true; logarithmicDepthBuffer: true;"
       arjs="sourceType: webcam; debugUIEnabled: false; trackingMethod: best;"
       loading-screen="enabled: false"
     >
-      <a-assets timeout="15000">
-        <a-asset-item id="model" src="Matiblendlocationtest.glb"></a-asset-item>
-      </a-assets>
       <a-entity
         gps-entity-place="latitude: 37.35170; longitude: 23.46239"
-        rotation="0 180 0"
+        look-at="[gps-camera]"
       >
-        <a-entity
-          gltf-model="#model"
-          animation-mixer="loop: repeat"
-          position="0 1 0"
-          scale="20 20 20"
-        ></a-entity>
+        <a-text
+          value="🏛 ARExhibition\nWillkommen auf Hydra!"
+          color="white"
+          align="center"
+          width="20"
+          position="0 3 0"
+        ></a-text>
+        <a-box
+          position="0 3 -0.1"
+          width="10"
+          height="2.5"
+          depth="0.1"
+          color="#1a1a2e"
+          opacity="0.8"
+        ></a-box>
+        <a-cylinder
+          position="0 0.5 0"
+          radius="1"
+          height="0.3"
+          color="#00ffcc"
+          opacity="0.9"
+        ></a-cylinder>
       </a-entity>
       <a-camera gps-camera="minDistance: 0" rotation-reader></a-camera>
     </a-scene>
-
     <script>
-      const TARGET_LAT = 37.35170;
-      const TARGET_LON = 23.46239;
-      let userLat = null, userLon = null, userHeading = null;
-
-      function toRad(deg) { return deg * Math.PI / 180; }
-      function toDeg(rad) { return rad * 180 / Math.PI; }
-
-      function getDistance(lat1, lon1, lat2, lon2) {
-        const R = 6371000;
-        const dLat = toRad(lat2 - lat1);
-        const dLon = toRad(lon2 - lon1);
-        const a = Math.sin(dLat/2)**2 +
-                  Math.cos(toRad(lat1)) * Math.cos(toRad(lat2)) * Math.sin(dLon/2)**2;
-        return R * 2 * Math.atan2(Math.sqrt(a), Math.sqrt(1-a));
-      }
-
-      function getBearing(lat1, lon1, lat2, lon2) {
-        const dLon = toRad(lon2 - lon1);
-        const y = Math.sin(dLon) * Math.cos(toRad(lat2));
-        const x = Math.cos(toRad(lat1)) * Math.sin(toRad(lat2)) -
-                  Math.sin(toRad(lat1)) * Math.cos(toRad(lat2)) * Math.cos(dLon);
-        return (toDeg(Math.atan2(y, x)) + 360) % 360;
-      }
-
-      function updateCompass() {
-        if (userLat === null || userHeading === null) return;
-        const dist = getDistance(userLat, userLon, TARGET_LAT, TARGET_LON);
-        const bearing = getBearing(userLat, userLon, TARGET_LAT, TARGET_LON);
-        const relative = (bearing - userHeading + 360) % 360;
-
-        document.getElementById('distance').textContent =
-          dist < 1000 ? `${Math.round(dist)}m entfernt` : `${(dist/1000).toFixed(1)}km entfernt`;
-
-        const arrow = document.getElementById('arrow');
-        const dir   = document.getElementById('direction');
-        arrow.textContent = '⬆️';
-        arrow.style.transform = `rotate(${relative}deg)`;
-
-        if (dist < 10) {
-          dir.textContent = '🎯 Du bist da!';
-        } else if (relative < 30 || relative > 330) {
-          dir.textContent = 'Geradeaus';
-        } else if (relative < 90) {
-          dir.textContent = 'Leicht rechts';
-        } else if (relative < 150) {
-          dir.textContent = 'Rechts';
-        } else if (relative < 210) {
-          dir.textContent = 'Umdrehen';
-        } else if (relative < 270) {
-          dir.textContent = 'Links';
-        } else {
-          dir.textContent = 'Leicht links';
-        }
-      }
-
-      function startCompassListener() {
-        window.addEventListener('deviceorientation', e => {
-          // iOS: webkitCompassHeading ist genauer als alpha!
-          if (e.webkitCompassHeading !== undefined) {
-            userHeading = e.webkitCompassHeading;
-          } else {
-            userHeading = e.alpha;
-          }
-          updateCompass();
-        });
-      }
-
-      // Schritt 1: Kompass Button
-      document.getElementById('compassBtn').addEventListener('click', () => {
-        if (typeof DeviceOrientationEvent.requestPermission === 'function') {
-          DeviceOrientationEvent.requestPermission().then(state => {
-            if (state === 'granted') {
-              startCompassListener();
-              document.getElementById('compassStatus').textContent = '✅ Kompass aktiv';
-            } else {
-              document.getElementById('compassStatus').textContent = '⚠️ Kompass verweigert';
-            }
-            document.getElementById('compassBtn').style.display = 'none';
-            document.getElementById('startBtn').style.display = 'block';
-          }).catch(() => {
-            document.getElementById('compassBtn').style.display = 'none';
-            document.getElementById('startBtn').style.display = 'block';
-          });
-        } else {
-          // Android oder älteres iOS
-          startCompassListener();
-          document.getElementById('compassBtn').style.display = 'none';
-          document.getElementById('startBtn').style.display = 'block';
-        }
-      });
-
-      // Schritt 2: AR starten
       document.getElementById('startBtn').addEventListener('click', () => {
         document.getElementById('overlay').style.display = 'none';
         document.getElementById('status').style.display  = 'block';
-        document.getElementById('compass').style.display = 'block';
-
         navigator.geolocation.watchPosition(
           (pos) => {
-            userLat = pos.coords.latitude;
-            userLon = pos.coords.longitude;
+            const lat = pos.coords.latitude.toFixed(5);
+            const lon = pos.coords.longitude.toFixed(5);
             const acc = Math.round(pos.coords.accuracy);
-            document.getElementById('status').textContent =
-              `📍 ${userLat.toFixed(5)}, ${userLon.toFixed(5)} (±${acc}m)`;
-            updateCompass();
+            document.getElementById('status').textContent = `📍 ${lat}, ${lon} (±${acc}m)`;
           },
           (err) => { document.getElementById('status').textContent = '⚠️ GPS Fehler: ' + err.message; },
           { enableHighAccuracy: true, maximumAge: 0, timeout: 15000 }
