--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       arjs="sourceType: webcam; debugUIEnabled: false; trackingMethod: best;"
       loading-screen="enabled: false"
     >
-      <!-- Zylinder am Boden als Markierung -->
+      <!-- Zylinder am Boden -->
       <a-cylinder
         gps-entity-place="latitude: 37.35167; longitude: 23.46232"
         radius="0.5"
@@ -53,21 +53,22 @@
         opacity="0.9"
       ></a-cylinder>
 
-      <!-- Schild fest im Raum, kein look-at -->
+      <!-- Schild 2m hoch, 90 Grad gedreht damit man es lesen kann -->
       <a-entity
         gps-entity-place="latitude: 37.35167; longitude: 23.46232"
+        rotation="0 90 0"
       >
         <a-box
           width="8" height="2" depth="0.1"
           color="#1a1a2e" opacity="0.85"
-          position="0 5 0"
+          position="0 2 0"
         ></a-box>
         <a-text
           value="ARExhibition\nWillkommen auf Hydra!"
           color="white"
           align="center"
           width="14"
-          position="0 5 0.1"
+          position="0 2 0.1"
         ></a-text>
       </a-entity>
 
