--- a/index.html
+++ b/index.html
@@ -53,22 +53,22 @@
         opacity="0.9"
       ></a-cylinder>
 
-      <!-- Schild 2m hoch, 90 Grad gedreht damit man es lesen kann -->
+      <!-- Schild direkt über Zylinder, Richtung Felsen (Nord) -->
       <a-entity
         gps-entity-place="latitude: 37.35167; longitude: 23.46232"
-        rotation="0 90 0"
+        rotation="0 0 0"
       >
         <a-box
-          width="8" height="2" depth="0.1"
+          width="6" height="1.5" depth="0.1"
           color="#1a1a2e" opacity="0.85"
-          position="0 2 0"
+          position="0 1.5 0"
         ></a-box>
         <a-text
           value="ARExhibition\nWillkommen auf Hydra!"
           color="white"
           align="center"
-          width="14"
-          position="0 2 0.1"
+          width="10"
+          position="0 1.5 0.1"
         ></a-text>
       </a-entity>
 
