--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
       arjs="sourceType: webcam; debugUIEnabled: false; trackingMethod: best;"
       loading-screen="enabled: false"
     >
+      <a-assets>
+        <img id="bild" src="8FE8AA28-375B-4C00-B168-BCDECCBDCEA6.png" />
+      </a-assets>
+
       <a-cylinder
         gps-entity-place="latitude: 37.35158; longitude: 23.46232"
         radius="0.3"
@@ -55,18 +59,26 @@
       <a-entity
         gps-entity-place="latitude: 37.35158; longitude: 23.46232"
       >
+        <!-- Textschild links -->
         <a-box
           width="4" height="1.2" depth="0.1"
           color="#1a1a2e" opacity="0.85"
-          position="0 1.5 0"
+          position="-3 1.5 0"
         ></a-box>
         <a-text
           value="ARExhibition\nWillkommen auf Hydra!"
           color="white"
           align="center"
           width="7"
-          position="0 1.5 0.06"
+          position="-3 1.5 0.06"
         ></a-text>
+
+        <!-- Bild rechts daneben -->
+        <a-plane
+          src="#bild"
+          width="3" height="2"
+          position="1.5 1.5 0"
+        ></a-plane>
       </a-entity>
 
       <a-camera gps-camera="minDistance: 0" rotation-reader></a-camera>
